--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,6 +3,7 @@ env:
   es2020: true
 extends:
   - eslint:recommended
+  - plugin:@typescript-eslint/eslint-recommended
   - plugin:@typescript-eslint/recommended
   - plugin:prettier/recommended
   - prettier/@typescript-eslint
