--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "typescript-node-express",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "nodemon dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -13,6 +14,8 @@
   "author": "Pedro R. Jiménez",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.31",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "eslint": "^7.20.0",
